# ColorConvert

./: .gitignore  CMakeLists.txt  README.md
include/colorgui/: rgb_gradient.h  transfer_gradient.h
include/colormath/: color_space.h  colorspace.h  convert.h  transfer.h  xyz_utils.h
include/colorvec/: conf.h  mat3.h  vec3.h
include/vecmath/: mat3.h
src/: CMakeLists.txt
src/colorgui/: CMakeLists.txt  rgb_gradient.cpp  transfer_gradient.cpp
src/colormath/: CMakeLists.txt  color_space.cpp  transfer.cpp
src/colorvec/: CMakeLists.txt  mat3.cpp  vec3.cpp
src/vecmath/: CMakeLists.txt  mat3.cpp  vec3.cpp
tests/: CMakeLists.txt
tests/colormath/: CMakeLists.txt  color_space_tests.cpp  transfer_tests.cpp
tests/colorvec/: CMakeLists.txt  mat3_tests.cpp  test_types.h  vec3_tests.cpp
tests/gui/: CMakeLists.txt  gui_tests.cpp  gui_tests_view.cpp
tests/vecmath/: CMakeLists.txt  mat3_tests.cpp  test.h  test_types.h  vec3_tests.cpp
